--- a/network/config.json
+++ b/network/config.json
@@ -5,11 +5,11 @@
   "logo": {
     "file": "",
     "link": "",
-    "text": "Callum Jones"
+    "text": "Click here for detailed legend"
   },
   "text": {
     "more": "",
-    "intro": "Australian far-right organisations and individuals present in Time State 1 (TS1). TS1 encompasses organisations and individuals pre-World War II and those present directly after, between 1945-1955. Nodes in the network represent Australian far-right organisations and individuals. \nAustralian far-right organisations are labelled, however, Australian far-right individuals are anonymised, and are represented by numbers.\nNodes in the network are coloured by their assigned ideology.\nNodes in the network are sized by degree centrality.\n\nPlease use the search bar below to directly search for an Australian far-right organisation by name.\nPlease feel free to explore the network by directly interacting with it. \nWhen you select a node in the network please refer to the pop-up panel on the right-hand side for details about that node, including its organisational form, ideology, centrality scores, modularity and all connected nodes.",
+    "intro": "Australian far-right organisations and individuals present in Time State 1 (TS1). TS1 encompasses organisations and individuals pre-World War II and those present directly after, between 1945-1955. \nPlease feel free to explore the network by directly interacting with it. \n You can use the search bar below to search for nodes by name. When you select a node in the network please refer to the pop-up panel on the right-hand side for details about that node, including its organisational form, ideology, centrality scores, modularity and all connected nodes.",
     "title": "Australian far-right network (Time State 1)"
   },
   "legend": {
