attempt to add home button at top

--- a/network/config.json
+++ b/network/config.json
@@ -3,7 +3,7 @@
   "version": "1.0",
   "data": "data.json",
   "logo": {
-    "file": "https://callumjonesphd.wordpress.com/",
+    "file": "https://www.flaticon.com/free-icon/home-button_61972",
     "link": "https://callumjonesphd.wordpress.com/",
     "text": "Home"
   },
