--- a/network/config.json
+++ b/network/config.json
@@ -3,7 +3,7 @@
   "version": "1.0",
   "data": "data.json",
   "logo": {
-    "file": "https://cdn-icons-png.flaticon.com/512/61/61972.png",
+    "file": "https://callumjonesphd.wordpress.com/",
     "link": "https://callumjonesphd.wordpress.com/",
     "text": "Home"
   },
